executable("kernel") {

    output_extension = "sys"

    sources = [
        "src/start.asm",
        "src/main.cc",
        "src/printf.cc",
        "src/cxxabi.cc",
        "src/logging.cc",
        #"src/graphics/canvas.cc",
        "src/hwres/addrspace.cc",
        "src/hwres/cpu.asm",
        "src/mem/liballoc.cc",
        "src/mem/efi_alloc_service.cc",
        #"src/obmodel/svclocate.cc",
        "src/obmodel/service_locator.cc"

    ]

    include_dirs = [ "inc" ]

    deps = [ "//sources/klibcore", "//sources/klibuefi" ]

    configs = [ "//build/config/conurbation" ]

    cflags = [ "-gline-tables-only", "-mfpmath=sse", "-msse3" ]
    cflags_cc = [ "-std=c++1z", "-nostdinc", "-ffreestanding", "-fno-exceptions", "-fno-rtti", "-fblocks" ]
    ldflags = [  "-fuse-ld=gold", "-nostdlib", "-S", "-zmax-page-size=4096", "-gc-sections", "--no-ld-generated-unwind-info" ]


}
