executable("kernel") {

    output_extension = "sys"

    sources = [
        "src/start.asm",
        "src/main.cc",
        "src/cxxabi.cc",
        "src/stringbuilder.cc",
        "src/string.cc",

        "src/ecs/component.cc",
        "src/ecs/entity.cc",

        "src/hwres/addrspace.cc",

        "src/hwres/cpu.asm",
        "src/mem/liballoc.cc",

        "src/services/locator.cc",
        "src/services/uefi/console.cc",
        "src/services/uefi/pages.cc",
        "src/services/directlog.cc"

    ]

    include_dirs = [ "inc" ]

    deps = [ "//sources/klibcore", "//sources/klibuefi" ]

    configs = [ "//build/config/conurbation" ]

    cflags = [ "-gline-tables-only", "-mfpmath=sse", "-msse3" ]
    cflags_cc = [ "-std=c++1z", "-nostdinc", "-ffreestanding", "-fno-exceptions", "-fno-rtti", "-fblocks" ]
    ldflags = [  "-fuse-ld=gold", "-nostdlib", "-zmax-page-size=4096", "--no-ld-generated-unwind-info" ]


}
