source_set("klibcore") {

    public = [
        "inc/_superapi.h",
        "inc/guid.h",
        "inc/stdarg.h",
        "inc/stdbool.h",
        "inc/stddef.h",
        "inc/stdint.h",
        "inc/string.h"
    ]

    sources = [
        "src/cstrings.cc",
        "src/mem.asm",
        "src/blocks.cc",
    ]

    all_dependent_configs = [ ":depend" ]

    cflags = [ "-gline-tables-only", "-mfpmath=sse", "-msse3" ]
    cflags_cc = [ "-std=c++1z", "-nostdinc", "-ffreestanding", "-fno-exceptions", "-fno-rtti", "-fblocks" ]

}

config("depend") {
    include_dirs = [ "inc" ]
}
