source_set("klibuefi") {

    public = []
    sources = [
        "src/tostring.cc"
    ]

    public_deps = [ "//sources/klibcore" ]
    all_dependent_configs = [ ":depend" ]

    cflags_cc = [ "-std=c++1z", "-nostdinc", "-ffreestanding", "-fno-exceptions", "-fno-rtti", "-fblocks" ]

}

config("depend") {
    include_dirs = ["inc"]
}
