static_library("libparkour") {

    sources = [
        "src/syscall.s",
        "src/Promise.cc"
    ]
    public = [
    ]
    
    deps = [
        "//sources/common/cstd"
        ]
    
    public_configs = [ ":depend" ]
    configs = [
        "//build/toolchain/clang:std-14",
        "//build/toolchain/clang:ffreestanding",
        "//build/toolchain/clang:nostdinc",
        "//build/toolchain/clang:nostdlib",
        "//build/toolchain/clang:fno-exceptions",
        "//build/toolchain/clang:fno-rtti"
    ]

}

config("depend") {
    include_dirs = ["./inc"]
}