kernel_library("owpenlibm") {

    sources = [
        #"src/e_exp.c",
        "src/s_fabsf.c",
        #"src/e_acosf.c",
        #"src/s_scalbnf.c",
        #"src/s_llround.c",
        #"src/s_nextafterl.c",
        #"src/e_jnf.c",
        #"src/s_sinf.c",
        "src/s_atan.c",
        #"src/s_fmaxl.c",
        #"src/s_cpowf.c",
        #"src/s_cpow.c",
        #"src/s_ilogbl.c",
        #"src/s_remquo.c",
        #"src/e_fmodf.c",
        #"src/s_tanh.c",
        #"src/s_nextafterf.c",
        #"src/s_sinl.c",
        #"src/s_cpowl.c",
        #"src/s_fmaxf.c",
        #"src/s_fabsl.c",
        #"src/s_scalbnl.c",
        #"src/e_acosl.c",
        #"src/s_ilogb.c",
        #"src/e_fmodl.c",
        #"src/s_ilogbf.c",
        #"src/s_clogf.c",
        #"src/s_modf.c",
        #"src/s_tan.c",
        #"src/s_cargl.c",
        #"src/s_floorf.c",
        #"src/s_isfinite.c",
        #"src/e_sinh.c",
        #"src/e_asin.c",
        #"src/s_llrintf.c",
        #"src/s_csin.c",
        #"src/s_clogl.c",
        #"src/k_sinf.c",
        #"src/s_cacos.c",
        #"src/s_expm1f.c",
        #"src/s_llrintl.c",
        #"src/s_nexttowardf.c",
        #"src/k_tan.c",
        #"src/s_cargf.c",
        #"src/s_floorl.c",
        #"src/s_creal.c",
        #"src/s_catan.c",
        #"src/s_csinf.c",
        "src/fenv.c",
        #"src/s_log1pf.c",
        #"src/s_fmax.c",
        #"src/s_ccoshl.c",
        #"src/s_fminf.c",
        #"src/s_copysignf.c",
        #"src/s_scalbn.c",
        #"src/e_hypotf.c",
        #"src/e_sqrt.c",
        #"src/s_roundf.c",
        #"src/e_j0f.c",
        #"src/s_ctanh.c",
        #"src/s_csinhl.c",
        #"src/k_exp.c",
        #"src/e_remainder.c",
        #"src/s_floor.c",
        #"src/s_conjl.c",
        #"src/s_log1p.c",
        #"src/s_signbit.c",
        #"src/e_sqrtl.c",
        #"src/s_nextafter.c",
        #"src/k_cos.c",
        #"src/s_fminl.c",
        #"src/s_copysignl.c",
        #"src/e_lgamma.c",
        #"src/s_isnan.c",
        #"src/s_scalbln.c",
        #"src/e_hypotl.c",
        #"src/s_cos.c",
        #"src/s_csinl.c",
        #"src/e_j1f.c",
        #"src/s_ccoshf.c",
        #"src/e_expf.c",
        #"src/e_sqrtf.c",
        #"src/s_cacosh.c",
        #"src/e_acoshf.c",
        #"src/s_csinhf.c",
        #"src/s_roundl.c",
        #"src/s_conjf.c",
        #"src/s_modff.c",
        #"src/e_lgamma_r.c",
        #"src/s_crealf.c",
        #"src/s_nan.c",
        #"src/e_fmod.c",
        #"src/s_cacoshl.c",
        #"src/s_casinl.c",
        #"src/s_ccosh.c",
        #"src/s_fmal.c",
        #"src/s_frexp.c",
        #"src/s_casinhl.c",
        #"src/s_tgammaf.c",
        #"src/s_sincosf.c",
        #"src/s_erff.c",
        #"src/s_creall.c",
        #"src/s_cacoshf.c",
        #"src/e_rem_pio2f.c",
        #"src/s_casinf.c",
        #"src/e_lgammaf_r.c",
        #"src/s_modfl.c",
        #"src/s_cproj.c",
        #"src/s_casinhf.c",
        #"src/s_sincosl.c",
        #"src/s_catanh.c",
        "src/e_atan2.c",
        #"src/s_asinhf.c",
        #"src/s_fma.c",
        #"src/e_log.c",
        #"src/s_fmaf.c",
        #"src/s_ccosf.c",
        "src/s_isinf.c",
        #"src/s_frexpf.c",
        #"src/e_powf.c",
        #"src/s_cprojf.c",
        #"src/s_isnormal.c",
        #"src/s_lrintf.c",
        #"src/s_catanl.c",
        #"src/s_ctanhl.c",
        #"src/s_cabs.c",
        #"src/s_trunc.c",
        #"src/s_cprojl.c",
        #"src/s_fpclassify.c",
        #"src/s_lrintl.c",
        #"src/s_catanf.c",
        #"src/s_ccosl.c",
        #"src/e_atanhf.c",
        #"src/s_frexpl.c",
        #"src/s_ctanhf.c",
        #"src/s_cimag.c",
        #"src/s_conj.c",
        #"src/s_casinh.c",
        #"src/s_cbrt.c",
        #"src/s_expm1.c",
        #"src/s_signgam.c",
        #"src/s_logb.c",
        #"src/k_rem_pio2.c",
        #"src/e_hypot.c",
        #"src/s_ctanf.c",
        #"src/e_jn.c",
        #"src/e_logf.c",
        #"src/s_ceil.c",
        #"src/s_cacosl.c",
        #"src/s_csinh.c",
        #"src/w_cabsf.c",
        #"src/s_catanhl.c",
        #"src/s_lround.c",
        #"src/s_casin.c",
        "src/common.c",
        #"src/s_cabsf.c",
        #"src/s_remquol.c",
        "src/e_atan2f.c",
        #"src/k_expf.c",
        #"src/polevll.c",
        #"src/e_pow.c",
        #"src/s_fdim.c",
        #"src/s_cacosf.c",
        #"src/s_ccos.c",
        #"src/s_sincos.c",
        #"src/s_nexttoward.c",
        #"src/s_ctanl.c",
        #"src/s_cexp.c",
        #"src/e_acos.c",
        #"src/s_remquof.c",
        #"src/s_llrint.c",
        #"src/e_atan2l.c",
        #"src/w_cabsl.c",
        #"src/s_copysign.c",
        #"src/s_catanhf.c",
        #"src/s_cabsl.c",
        #"src/w_cabs.c",
        #"src/e_asinf.c",
        #"src/s_truncf.c",
        #"src/s_cosf.c",
        #"src/s_csqrt.c",
        #"src/s_exp2.c",
        #"src/s_ctan.c",
        #"src/e_remainderl.c",
        #"src/s_logbl.c",
        #"src/s_rintl.c",
        #"src/e_lgammaf.c",
        #"src/e_log10f.c",
        #"src/s_clog.c",
        #"src/e_atanh.c",
        #"src/s_sin.c",
        #"src/s_cexpl.c",
        #"src/s_rint.c",
        #"src/s_truncl.c",
        #"src/e_j1.c",
        #"src/s_cosl.c",
        #"src/e_remainderf.c",
        #"src/s_logbf.c",
        #"src/k_sin.c",
        #"src/k_tanf.c",
        #"src/s_exp2f.c",
        #"src/s_erf.c",
        #"src/e_asinl.c",
        #"src/s_cexpf.c",
        #"src/s_rintf.c",
        #"src/e_lgammal.c",
        #"src/s_cbrtl.c",
        #"src/s_lroundf.c",
        #"src/s_lrint.c",
        "src/s_atanf.c",
        #"src/s_tanf.c",
        #"src/e_coshf.c",
        #"src/s_llroundl.c",
        #"src/s_csqrtf.c",
        #"src/e_cosh.c",
        #"src/s_cimagl.c",
        #"src/s_ceill.c",
        #"src/s_carg.c",
        #"src/e_acosh.c",
        #"src/e_sinhf.c",
        #"src/s_nearbyint.c",
        #"src/s_asinh.c",
        #"src/e_j0.c",
        #"src/s_tanhf.c",
        #"src/s_atanl.c",
        #"src/s_tanl.c",
        #"src/s_round.c",
        #"src/k_cosf.c",
        #"src/s_cbrtf.c",
        #"src/s_lroundl.c",
        #"src/e_rem_pio2.c",
        #"src/s_fmin.c",
        #"src/e_log2f.c",
        #"src/e_log10.c",
        "src/s_fabs.c",
        #"src/s_llroundf.c",
        #"src/e_log2.c",
        #"src/s_csqrtl.c",
        #"src/s_cimagf.c",
        #"src/s_ceilf.c"
    ]

    cflags = [ "-w" ]

    public_deps = [ "//sources/superlibs/owlevel" ]

}
