source_set("acpica") {

#    complete_static_lib = true
    
    deps = [
        "src/debugger", 
        "src/disassembler", 
        "src/dispatcher", 
        "src/events", 
        "src/executer", 
        "src/hardware", 
        "src/namespace", 
        "src/parser", 
        "src/resources", 
        "src/tables", 
        "src/utilities"
    ]
    
    include_dirs = [ "inc/acpica" ]
    
    public_configs = [ ":depend" ]
    
    configs = [
        "//build/subsystem/supervisor",
        "//sources/supervisor/ukernel:depend",
        
        "//build/toolchain/clang:nostdinc",
        "//build/toolchain/clang:nostdlib",
        "//build/toolchain/clang:mno-red-zone",
        "//build/toolchain/clang:mcmodel--large",
        "//build/toolchain/clang:ffreestanding",
        "//build/toolchain/clang:fno-rtti",
        "//build/toolchain/clang:fno-exceptions",
        "//build/toolchain/clang:std-14",
        "//build/toolchain/clang:Wall",
        "//build/toolchain/clang:pedantic"
        
    ]
    
}

config("depend") {
    include_dirs = ["./inc"]
}