efi_application("jones") {

    sources = ["src/appmain.cc"]


    cflags_cc = [ "-Xclang", "-std=c++1z"]
    #ldflags = [ "/subsystem:10" ]

    data_deps = [ ":jonessvc" ]

}

efi_boot_driver("jonessvc") {

    sources = [ "src/drvmain.cc", "src/elf64loader.cc" ]

    cflags_cc = [ "-Xclang", "-std=c++1z" ]

}
