kernel("kernel") {

#    kobject = "io.github.twrl.conurbation.supervisor.core"

    sources = [
        #"src/start.asm",
        #"src/main.cc",
        #"src/ldso.cc",
        "src/kdso.cc",
#        "src/ssp.cc",
        #"src/heap/uefiheap.cc",
        #"src/heap/bestfit.cc"
    ]

    cflags_cc = [  "-std=c++1z",]
    ldflags = [  ]

    public_deps = [
        "//sources/supervisor/owlevel",
        "//sources/supervisor/kuefi"
        ]

    include_dirs = [ "//sources/supervisor/jones/inc" ]

    #data_deps = [ "//sources/supervisor/jones:jonessvc(//build/config/toolchain/uefi-llvm)" ]
    #configs = [ "//sources/supervisor/jones:jonessvc_depend(//build/config/toolchain/uefi-llvm)" ]

}
