kernel("kernel") {

    kobject = "io.github.twrl.conurbation.supervisor.core"

    sources = [
#        "src/start.asm",
#        "src/main.cc",
        #"src/ldso.cc",
#        "src/kdso.cc",
#        "src/ssp.cc",
        #"src/heap/uefiheap.cc",
        #"src/heap/bestfit.cc"
    ]

    cflags_cc = [  "-std=c++1z",]
    ldflags = [  ]

    public_deps = [
        "//sources/superlibs/owlevel",
        "//sources/uefi/jonesapi"
    ]

    deps = [
        "//sources/supervisor/executive",
        "//sources/supervisor/hal-x64-uefi"
    ]

}
