static_library("libuefi") {
    sources = [
        "src/vsprintf.cc"
    ]
    public = [
        "inc/uefi/tables.h",
        "inc/uefi/types.h",
        "inc/uefi/protocol/simple_text_input.h",
        "inc/uefi/protocol/simple_text_output.h"
    ]
    public_configs = [ "//sources/supervisor/ukernel:depend", ":depend" ]
    
    configs = [
        
        
        "//build/toolchain/clang:nostdlib",
        "//build/toolchain/clang:fno-stack-protector",
            "//build/toolchain/clang:fpic",
            "//build/toolchain/clang:fshort-wchar",
            "//build/toolchain/clang:mno-red-zone",
            "//build/toolchain/clang:Wall",
            "//build/toolchain/clang:pedantic",
            "//build/toolchain/clang:znocombreloc",
            "//build/toolchain/clang:std-14"
    ]
}

static_library("efirt") {
    sources = [
        "src/crt0.s",
        "src/selfreloc.cc"
    ]
    
    public_configs = [ "//sources/supervisor/ukernel:depend", ":depend" ]
    
    configs = [
        "//build/toolchain/clang:nostdlib",
            "//build/toolchain/clang:fno-stack-protector",
            "//build/toolchain/clang:fpic",
            "//build/toolchain/clang:fshort-wchar",
            "//build/toolchain/clang:mno-red-zone",
            "//build/toolchain/clang:Wall",
            "//build/toolchain/clang:pedantic",
            "//build/toolchain/clang:znocombreloc",
            "//build/toolchain/clang:std-14"
    ]
}

config("depend") {
    include_dirs = ["./inc"]
}
