import("//sources/supervisor/libuefi/efiproj.gni")

efi_application("loadelf") {

    public = [
    ]
    
    sources = [
        "src/loadelf.cc",
        "src/elf64.cc"
    ]
    
    deps = [
        "//sources/supervisor/libuefi"
    ]
    
    include_dirs = [ "inc/" ]
    
    configs = []

}