kernel_library("owlevel") {

    public = [
        "atomic_types.hh",
        "char_types.hh",
        "numeric_types.hh",
        "traits.hh",
        "vector_types.hh",
        
        "ll/ucd.hh",
        "ll/unicode_props.hh",
    ]
    
    sources = [
        "src/handlers.cc",
        "src/primitive_traits.cc",
        
        "src/icxxabi/guard.cc",
        "src/icxxabi/virtual.cc"
    ]
    
    cflags_cc = [ "-std=c++1z" ]

}