executable("ukernel") {
    
    sources = [
        "src/activity.cc",
        "src/malloc.cc",
        "src/mib.cc",
        "src/string.cc",
        "src/syscall.s"
    ]
    
    public = [
        "inc/types.h",
        "inc/activity.h",
        "inc/hal/diagnostic.h",
        "inc/hal/firmware.h",
        "inc/hal/hwevent.h",
        "inc/hal/topology.h",
        "inc/hal/virtmem.h"
    ]
    
    public_configs = [ ":depend" ]
    
    deps = [
        "//sources/common/cstd",
        "//sources/supervisor/supercxx"
    ]
    allow_circular_includes_from = [
        "//sources/supervisor/supercxx"
    ]
    
    inputs = [
        "./ukernel.lds"
    ]
    
    configs = [
        "//build/subsystem/supervisor",
        
        "//build/toolchain/clang:nostdinc",
        "//build/toolchain/clang:nostdlib",
        "//build/toolchain/clang:mno-red-zone",
        "//build/toolchain/clang:mcmodel--large",
        "//build/toolchain/clang:ffreestanding",
        "//build/toolchain/clang:fno-rtti",
        "//build/toolchain/clang:fno-exceptions",
        "//build/toolchain/clang:std-14",
        "//build/toolchain/clang:Wall",
        "//build/toolchain/clang:pedantic"
    ]
    
    if (hal == "x64-uefi") {
        deps += [ "//sources/supervisor/hal-x64-uefi" ]
        allow_circular_includes_from += [ "//sources/supervisor/hal-x64-uefi" ]
    }
    
    output_extension = "sys"
    
    #ldscript = rebase_path("ukernel.lds", root_build_dir)
    ldflags = [ "-Wl,-zmax-page-size=4096", "-Wl,-M", "-Wl,--cref"] #, "-Wl,-T$ldscript" ]
    
}

config("depend") {
    include_dirs = ["./inc"]
    
}