source_set("executer") {
    sources = ["exconfig.c", "exconvrt.c", "excreate.c", "exdebug.c", "exdump.c", "exfield.c", "exfldio.c", "exmisc.c", "exmutex.c", "exnames.c", "exoparg1.c",
"exoparg2.c", "exoparg3.c", "exoparg6.c", "exprep.c", "exregion.c", "exresnte.c", "exresolv.c", "exresop.c", "exstore.c", "exstoren.c", "exstorob.c",
"exsystem.c", "exutils.c"]
    configs = [ "//build/subsystem/supervisor" ]
    include_dirs = [ "../../inc/acpica" ]
}